ndb - bug#24664   1) run lcp snapshot for both MM and DD tables (so I dont have to change restore to use WRITE)   2) fix >= and > bug in lcp skip/keep handling   3) very cool test prog for this :-)

storage/ndb/include/kernel/signaldata/BackupContinueB.hpp:
  Add new error insert
storage/ndb/src/kernel/blocks/ERROR_codes.txt:
  Add new error insert
storage/ndb/src/kernel/blocks/backup/Backup.cpp:
  Add new error insert
storage/ndb/src/kernel/blocks/dbtup/DbtupCommit.cpp:
  1) get >= and > correct for lcp keep/skip
  2) always run lcp snapshot impl. (previously only for dd tables)
storage/ndb/src/kernel/blocks/dbtup/DbtupScan.cpp:
  1) get >= and > correct for lcp keep/skip
  2) always run lcp snapshot impl. (previously only for dd tables)
storage/ndb/test/ndbapi/testSystemRestart.cpp:
  add testcase
storage/ndb/test/run-test/daily-basic-tests.txt:
  add testcase